--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,9 @@ dependencies {
     compile 'de.greenrobot:greendao-generator:2.0.0'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:cardview-v7:23.0.+'
+
+
 }
