--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.brecht.redditviewer"
+        applicationId "com.carnewal.brecht.redditviewer"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -20,6 +20,10 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+    repositories {
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
 
 }
 
@@ -29,18 +33,16 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
 
-
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.google.code.gson:gson:2.2.4'
-
-    compile 'de.greenrobot:greendao:2.0.0'
-    compile 'de.greenrobot:greendao-generator:2.0.0'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:cardview-v7:23.0.+'
+
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 
 
 }
