--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme" >
 
         <service android:name=".data.service.SubredditSyncService" />
+        <service android:name=".data.service.PostSyncService" />
 
 
         <activity
@@ -29,7 +30,7 @@
             android:name="com.activeandroid.content.ContentProvider" />
 
         <meta-data android:name="AA_DB_NAME" android:value="redditviewer.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="4" />
+        <meta-data android:name="AA_DB_VERSION" android:value="10" />
 
     </application>
 
