--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.+'
 
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-
+    
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 
 }
