Refactoring, ItemClickSupport voor de Feed Recyclerview, Bijvoegen data voor display in recyclerview's cardview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme" >
 
         <service android:name=".data.service.SubredditSyncService" />
-        <service android:name=".data.service.PostSyncService" />
+        <service android:name=".data.service.FeedSyncService" />
 
 
         <activity
